<resources>
    <string name="app_name">GoShop</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="title_userhome">User Home</string>
    <string name="title_driverhome">Driver Home</string>
    <string name="title_addtrip">Add Trip</string>
    <string name="title_mytrips">My Trips</string>
    <string name="title_addavailability">Add Availability</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="matchfound_text">A match has been found</string>
    <string name="tripconfirmed_text">Your trip has been confirmed</string>
    <string name="jobconfirmed_text">Your job has been confirmed</string>

    <string name="places_key">AIzaSyAriEzsOgHW3_YOG_fQXKpmmuXIYWRdScI</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibHVrZWhlYmIiLCJhIjoiY2s1dmM0Z2hjMTNsMjNvbG9xZ2JzaHAxZyJ9.9mOGuiNaX_5AIEknXb7zZg</string>

    <!--Basic user location permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
</resources>
